--- a/Styles/hero.css
+++ b/Styles/hero.css
@@ -1,11 +1,11 @@
 /* Hero Section */
 .hero-section {
-    padding: 4rem 0;
-    min-height: auto;
-    display: flex;
-    align-items: center;
-    margin-top: 90px;
+  background-color: rgb(7, 7, 7);
+  max-width: 1800px;
+  margin: 0 auto;
+  padding: 3rem 0;
 }
+
 
 .hero-section .image-wrapper {
     margin-bottom: 2rem;
@@ -14,8 +14,8 @@
 }
 
 .hero-section .image-wrapper img {
-    height: 180px;
-    width: 180px;
+    height: 300px;
+    width: 300px;
     object-fit: cover;
     border-radius: 50%;
     border: 4px solid var(--primary-color);
