--- a/Styles/skillsSection.css
+++ b/Styles/skillsSection.css
@@ -1,4 +1,11 @@
 /* Skills Section */
+
+.skills-section {
+  background-color: rgb(7, 7, 7);
+  max-width: 1800px;
+  margin: 0 auto;
+  padding: 3rem 0;
+}
 .skills-section .skills-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
